# biovault

./: pyproject.toml  scripts
biovault/: __init__.py
biovault/conf/: constants.py
biovault/conf/templates/: variable_template.json
biovault/configuration/: __init__.py  configuration.py  constants.py
biovault/configuration/variable/: __init__.py  variable.py
biovault/configuration/variable/types/: __init__.py
biovault/database/: __init__.py  database.py
biovault/database/registers/: __init__.py  registers.py
biovault/database/registers/register/: __init__.py  register.py
biovault/database/scripts/: __init__.py  scripts.py
biovault/database/variables/: __init__.py  variables.py
biovault/database/variables/variable/: __init__.py  variable.py
biovault/operation/: __init__.py
biovault/register/: __init__.py  register.py
biovault/registers/: __init__.py  register.py  registers.py
biovault/registers/register/: __init__.py
biovault/utils/: __init__.py
biovault/validator/: __init__.py  validator.py
biovault/variable/: __init__.py  variable.py
biovault/variable/type/: __init__.py  binomial.py  boolean.py  complex.py  date.py  float.py  integer.py  listed.py  multilabel.py  nominal.py  number.py  object.py  ordinal.py  percentage.py  string.py
biovault/variables/: variables.py
tests/material/: database.xlsx  variable_date.json  variable_general.json  variable_listed.json  variable_listed_simple.json  variable_object.json
tests/material/configuration/json/: dates.json  formula.json  (+6 more)
tests/material/scripts/: constants.py  functions.py
(+56 files in other folders)
